examples/errors/parser-superflous-dash-in-range.spcasm
org 0
incbin "../binary.bin":2-3-1
